`feat` : add /field endpoint
